--- a/components/polymer/bower.json
+++ b/components/polymer/bower.json
@@ -2,7 +2,7 @@
   "name": "polymer",
   "private": true,
   "dependencies": {
-    "platform": "Polymer/platform#^0.4.0",
-    "core-component-page": "Polymer/core-component-page#^0.4.0"
+    "webcomponentsjs": "Polymer/webcomponentsjs#master",
+    "core-component-page": "Polymer/core-component-page#master"
   }
 }
